<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <LinearLayout
            android:id="@+id/llUserNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivUserImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:srcCompat="@drawable/user_placeholder"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    android:textSize="20sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvUserDesignation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_designation"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivArticleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/user_placeholder"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvArticleDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_designation"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_designation"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvArticleUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_designation"
            android:textColor="@android:color/black"
            android:layout_marginTop="12dp"
            android:maxLines="2"
            android:textSize="12sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvComments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:layout_gravity="end"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>